[gd_scene load_steps=3 format=3 uid="uid://dkntrq2rkak5n"]

[ext_resource type="Script" path="res://Scripts/setting.gd" id="1_vmq18"]
[ext_resource type="Texture2D" uid="uid://lyui542c83ya" path="res://ASSETS/windows/windows_border - Copy.png" id="2_4b714"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmq18")

[node name="WindowsBorder-Copy" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_4b714")

[node name="EXIT_SETTING" type="Button" parent="."]
layout_mode = 0
offset_left = 1792.0
offset_right = 1920.0
offset_bottom = 112.0

[node name="GridContainer" type="GridContainer" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.76513, 1.79988)

[node name="DummyLabel" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="AudioSettingsLabel" type="Label" parent="GridContainer/DummyLabel"]
layout_mode = 0
offset_left = 54.3869
offset_top = 102.229
offset_right = 166.387
offset_bottom = 125.229
scale = Vector2(2.12591, 2.12591)
text = "Audio Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/DummyLabel/AudioSettingsLabel"]
layout_mode = 0
offset_left = 20.0
offset_top = 23.0
offset_right = 427.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MusicVolumeLabel" type="Label" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SoundEffectsVolumeLabel" type="Label" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="MasterVolumeHSlider" type="HSlider" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="MusicVolumeHSlider" type="HSlider" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SoundEffectsVolumeHSlider" type="HSlider" parent="GridContainer/DummyLabel/AudioSettingsLabel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="DummyLabel2" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 888.0
offset_right = 816.0
offset_bottom = 1086.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Very early prototype.

The layout of the settings menu is temporary."

[connection signal="pressed" from="EXIT_SETTING" to="." method="_on_exit_setting_pressed"]
